Version 2.0.18 release (2014/10/16)
-------------------------------------------

Added Register Statistics by year group.

Removed clicktoemail button for contacts in student view.

Fix for staff list checkboxes (table view) and added absent button.

Separated message log link from the Contacts block and 
added clicktoemail for the first two contacts.


Version 2.0.17 release (2014/10/08)
-------------------------------------------

DB synchronisation script (only updates students).

Meals attendance added to register.

New config option to choose the mandateid for fees: enrolno 
or student_id.

Added staff list option to use a photo wall.

Year export for staff attendance.

Tiny fixes for staff_list, manage subject reports, api.

Added week register print for a class.

Added transport mode option to Infobook custom groups.

Added message button in staff_list to send messages to staff.

New config option for adding name to email address in the from value.

A new config option which turns on/off the access for form tutors to
send email to parents for their form. The option is accessible through
Register.



Version 2.0.16 release (2014/09/24)
-------------------------------------------

Improved LDAP scripts to sync with SchoolBag.

Sections list added to Report on Attendance and fix for collates.

Added the option to add new fields for staff information, depends
on patch-2.0.16.sql for adding values.

Added postenquiryform action to ClassIS API.

Changes button from transport only fetches bookings with direction
OUT.

Added print_photo for register lists.

Added payee and account/iban to fees_invoice_export.

Added the option to link contacts merging their information.

Added Message button for Configure ePortfolios, it sends Classic 
logins to parents for current students in a form group.

Fees XML library uses ClassIS id for the mandate id.

Fix to SEN Strengths textarea name.

Added Message button for Transport.
