@@ -1,0 +1,12 @@
+<?php
+/**									class_nos_section_yeargroups.php
+ */
+
+$action='class_nos_section_yeargroups.php';
+
+$action_post_vars=array('view');
+$view='yeargroups';
+
+include('scripts/sub_action.php');
+include('scripts/redirect.php');
+?>
